# Ethical_amazon_scraper

./: .gitignore  CLAUDE.md  README.md  amazon_scraper.py  debug.py  debug_utils.py  main.py  mercadolibre_scraper.py  pyproject.toml  test_scrapers.py
.claude/: claude_code.md
